/*
 * *****************************************************************************
 * Copyright (C) 2014-2025 Dennis Sheirer
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>
 * ****************************************************************************
 */

import java.text.SimpleDateFormat

/**
 * Instructions for building/compiling the sdrtrunk application.
 *
 * Prerequisites:
 * Install and configure an OpenJDK version 22+ that includes the JavaFX modules (e.g. Bellsoft Liberica JDK)
 * - Optional: install and configure Gradle 8.10+
 */
plugins {
    id 'application'
    id 'java'
    id 'idea'
    id 'org.beryx.runtime' version '2.0.1'
}

repositories {
    mavenCentral()
    maven { url = "https://jitpack.io" }
}

version = project.findProperty('projectVersion')

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

sourceSets {
    main.java.srcDirs 'src/main'
    test.java.srcDirs 'src/test'
}

test {
    useJUnitPlatform()
}

dependencies {
    // JUnit Tests
    testImplementation(platform("org.junit:junit-bom:6.0.1"))
    testImplementation 'org.junit.jupiter:junit-jupiter-api:6.0.1'
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:6.0.1")
    testRuntimeOnly("org.junit.vintage:junit-vintage-engine:6.0.1")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")

    // Jitpack imports
    implementation 'com.github.dnault:libresample4j:master'
    implementation 'com.github.DSheirer.jmbe:jmbe-api:1.0.0'
    implementation 'com.github.nwaldispuehl:java-lame:v3.98.4'

    // Modern UI Framework - FlatLaf (Windows 11 Look and Feel & SVG Support)
    implementation 'com.formdev:flatlaf:3.4'
    implementation 'com.formdev:flatlaf-extras:3.4'

    // mavenCentral/jcenter imports
    implementation 'ch.qos.logback:logback-classic:1.5.21'
    implementation 'ch.qos.logback:logback-core:1.5.21'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.20.1'
    implementation 'com.fazecast:jSerialComm:2.11.4'
    implementation 'com.github.jiconfont:jiconfont-font_awesome:4.7.0.1'
    implementation 'com.github.jiconfont:jiconfont-javafx:1.0.0'
    implementation 'com.github.jiconfont:jiconfont-swing:1.0.1'
    implementation 'com.github.wendykierp:JTransforms:3.1'
    implementation 'com.google.code.gson:gson:2.13.2'
    implementation 'com.google.guava:guava:33.5.0-jre'
    implementation 'com.jidesoft:jide-oss:3.6.18'
    implementation 'com.miglayout:miglayout-swing:11.4.2'
    implementation 'com.mpatric:mp3agic:0.9.1'
    implementation 'commons-io:commons-io:2.21.0'
    implementation 'eu.hansolo:charts:1.0.5'
    implementation 'io.github.dsheirer:radio-reference-api:18.0.0'
    implementation 'io.github.dsheirer:usb4java-native-libraries:1.3.3'
    implementation 'io.github.dsheirer:usb4java:1.3.5'
    implementation 'javax.usb:usb-api:1.0.2'
    implementation 'net.coderazzi:tablefilter-swing:5.5.4'
    implementation 'org.apache.commons:commons-compress:1.28.0'
    implementation 'org.apache.commons:commons-lang3:3.19.0'
    implementation 'org.apache.commons:commons-math3:3.6.1'
    implementation 'org.apache.commons:commons-csv:1.14.1'
    implementation 'org.apache.mina:mina-core:2.2.4'
    implementation 'org.apache.mina:mina-http:2.2.4'
    implementation 'org.controlsfx:controlsfx:11.2.2'
    implementation 'org.rauschig:jarchivelib:1.2.0'
    implementation 'org.slf4j:slf4j-api:2.0.17'
    implementation 'org.usb4java:libusb4java:1.3.0'
    implementation 'org.usb4java:usb4java-javax:1.3.0'
    implementation 'pl.edu.icm:JLargeArrays:1.6'
    implementation 'io.github.jaredmdobson:concentus:1.0.2'
}

def os = org.gradle.nativeplatform.platform.internal.DefaultNativePlatform.currentOperatingSystem

tasks.withType(JavaCompile) {
    options.compilerArgs.add("--enable-preview")
    options.compilerArgs.add("--add-modules=jdk.incubator.vector")
}

/**
 * JVM Arguments for running the application on Windows.
 * Optimized for Windows 11 Hardware Acceleration and HiDPI.
 */
def jvmArgsWindows =
        ['--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED',
         '--add-exports=java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED',
         '--add-modules=jdk.incubator.vector',
         '--enable-preview',
         '--enable-native-access=ALL-UNNAMED',
         '--enable-native-access=javafx.graphics',
         '--sun-misc-unsafe-memory-access=allow',
         '-XX:+UseCompactObjectHeaders',
         '-Xmx6g',
         '-Djava.library.path=c:\\Program Files\\SDRplay\\API\\x64',
         '-Dsun.java2d.d3d=true',          // Hardware acceleration (Direct3D)
         '-Dsun.java2d.opengl=false',      // Avoid OpenGL conflicts on Windows
         '-Dsun.java2d.noddraw=false',     // Ensure DirectDraw is active
         '-Dflatlaf.uiScale=enabled'       // Enable High-DPI scaling
        ]

/**
 * JVM Arguments for running the application on Linux.
 */
def jvmArgsLinux =
        ['--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED',
         '--add-modules=jdk.incubator.vector',
         '--enable-preview',
         '--sun-misc-unsafe-memory-access=allow',
         '-XX:+UseCompactObjectHeaders',
         '-XX:+UseZGC',                    // Improved GC for lower latency spectrums
         '--enable-native-access=javafx.graphics',
         '--enable-native-access=ALL-UNNAMED',
         '-Xmx6g',
         '-Dsun.java2d.opengl=true',       // Hardware acceleration (OpenGL)
         '-Dflatlaf.uiScale=enabled'       // High-DPI scaling
        ]

application {
    mainClass = "io.github.dsheirer.gui.SDRTrunk"

    if(os.isWindows()) {
        applicationDefaultJvmArgs = jvmArgsWindows
    }
    else {
        applicationDefaultJvmArgs = jvmArgsLinux
    }
}

test {
    if(os.isWindows()) {
        jvmArgs = jvmArgsWindows
    }
    else {
        jvmArgs = jvmArgsLinux
    }
}

jar {
    manifest {
        attributes (
                'Implementation-Title'  : 'sdrtrunk project',
                'Implementation-Version' : archiveVersion,
                'Created-By'            : "Gradle ${gradle.gradleVersion}",
                'Build-Timestamp'       : new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSZ").format(new Date()),
                'Build-JDK'             : "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']}",
                'Build-OS'              : "${System.properties['os.name']} (${System.properties['os.arch']} ${System.properties['os.version']}"
        )
    }
}

idea {
    module {
        downloadJavadoc = true
        downloadSources = true
    }
}

javadoc {
    options.addStringOption('-add-modules', 'jdk.incubator.vector')
    options.addStringOption('Xdoclint:none', '-quiet')
}

/**
 * Runtime target OS and CPU image names.
 */
String targetLinuxAarch64 = 'linux-aarch64-v' + version
String targetLinuxX86_64 = 'linux-x86_64-v' + version
String targetOsxAarch64 = 'osx-aarch64-v' + version
String targetOsxX86_64 = 'osx-x86_64-v' + version
String targetWindowsX86_64 = 'windows-x86_64-v' + version
String targetWindowsAarch64 = 'windows-aarch64-v' + version

String jdk_base = '/home/denny/java_jdks/'
String jdk_linux_aarch64 = jdk_base + 'linux-arm64/jdk-25.0.1-full'
String jdk_linux_x86_64 = jdk_base + 'linux-x64/jdk-25.0.1-full'
String jdk_osx_x86_64 = jdk_base + 'osx-x64/jdk-25.0.1-full.jdk'
String jdk_osx_aarch64 = jdk_base + 'osx-arm64/jdk-25.0.1-full.jdk'
String jdk_windows_x86_64 = jdk_base + 'windows-x64/jdk-25.0.1-full'
String jdk_windows_aarch64 = jdk_base + 'windows-arm64/jdk-25.0.1-full'

def jdk_download_base = "https://download.bell-sw.com/java/25.0.1+11/bellsoft-jdk25.0.1+11-"
def jdk_download_suffix = "-full.tar.gz"
def jdk_download_linux_aarch64 = jdk_download_base + "linux-aarch64" + jdk_download_suffix
def jdk_download_linux_x86_64 = jdk_download_base + "linux-amd64" + jdk_download_suffix
def jdk_download_osx_x86_64 = jdk_download_base + "macos-amd64" + jdk_download_suffix
def jdk_download_osx_aarch64 = jdk_download_base + "macos-aarch64" + jdk_download_suffix
def jdk_download_windows_x86_64 = jdk_download_base + "windows-amd64-full.zip"
def jdk_download_windows_aarch64 = jdk_download_base + "windows-aarch64-full.zip"

def configure(org.beryx.runtime.RuntimeZipTask rt, List<String> jvmArgs) {
    rt.extension.launcherData.get().jvmArgs = jvmArgs
    rt.extension.addModules('jdk.crypto.ec', 'jdk.incubator.vector', 'jdk.accessibility', 'java.management')
    rt.extension.additive.set(true)
    rt.extension.addOptions('--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages')
    rt.extension.imageZip.set(file("$buildDir/image/sdr-trunk.zip"))
}

tasks.register('runtimeZipCurrent', org.beryx.runtime.RuntimeZipTask) {rt ->
    def arch = System.properties.getProperty("os.arch")
    def javaHome = org.gradle.internal.jvm.Jvm.current().getJavaHome().toString()

    if(os.isWindows()) {
        if(arch.equals("amd64")) {
            rt.extension.targetPlatform(targetWindowsX86_64, javaHome)
        }
        else if(arch.equals("aarch64")) {
            rt.extension.targetPlatform(targetWindowsAarch64, javaHome)
        }
        configure(rt, jvmArgsWindows)
    }
    else if(os.isLinux())
    {
        if(arch.equals("amd64")) {
            rt.extension.targetPlatform(targetLinuxX86_64, javaHome)
        }
        else if(arch.equals("aarch64")) {
            rt.extension.targetPlatform(targetLinuxAarch64, javaHome)
        }
        configure(rt, jvmArgsLinux)
    }
    else if(os.isMacOsX())
    {
        if(arch.equals("amd64")) {
            rt.extension.targetPlatform(targetOsxX86_64, javaHome)
        }
        else if(arch.equals("aarch64")) {
            rt.extension.targetPlatform(targetOsxAarch64, javaHome)
        }
        configure(rt, jvmArgsLinux)
    }
}

tasks.register('runtimeZipWindows', org.beryx.runtime.RuntimeZipTask) {rt ->
    if(file(jdk_windows_aarch64).exists()) {
        rt.extension.targetPlatform(targetWindowsAarch64, jdk_windows_aarch64, [])
    }
    else {
        rt.extension.targetPlatform(targetWindowsAarch64) {
            jdkHome = jdkDownload(jdk_download_windows_aarch64)
        }
    }
    if(file(jdk_windows_x86_64).exists()) {
        rt.extension.targetPlatform(targetWindowsX86_64, jdk_windows_x86_64, [])
    }
    else {
        rt.extension.targetPlatform(targetWindowsX86_64) {
            jdkHome = jdkDownload(jdk_download_windows_x86_64)
        }
    }
    configure(rt, jvmArgsWindows)
}

tasks.register('runtimeZipOthers', org.beryx.runtime.RuntimeZipTask) {rt ->
    if(file(jdk_linux_aarch64).exists()) {
        rt.extension.targetPlatform(targetLinuxAarch64, jdk_linux_aarch64, [])
    }
    else {
        rt.extension.targetPlatform(targetLinuxAarch64) {
            jdkHome = jdkDownload(jdk_download_linux_aarch64)
        }
    }
    if(file(jdk_linux_x86_64).exists()) {
        rt.extension.targetPlatform(targetLinuxX86_64, jdk_linux_x86_64, [])
    }
    else {
        rt.extension.targetPlatform(targetLinuxX86_64) {
            jdkHome = jdkDownload(jdk_download_linux_x86_64)
        }
    }
    if(file(jdk_osx_aarch64).exists()) {
        rt.extension.targetPlatform(targetOsxAarch64, jdk_osx_aarch64, [])
    }
    else {
        rt.extension.targetPlatform(targetOsxAarch64) {
            jdkHome = jdkDownload(jdk_download_osx_aarch64)
        }
    }
    if(file(jdk_osx_x86_64).exists()) {
        rt.extension.targetPlatform(targetOsxX86_64, jdk_osx_x86_64, [])
    }
    else {
        rt.extension.targetPlatform(targetOsxX86_64) {
            jdkHome = jdkDownload(jdk_download_osx_x86_64)
        }
    }
    configure(rt, jvmArgsLinux)
}
